# hotels

./: Cargo.toml
src/: db.rs  hotel.db  main.rs  models.rs  routes.rs
